# domeneshop_dynamic_dns

./: Dockerfile  LICENSE  README.md  config.template.toml  docker-compose.yml  install-packages.sh  pyproject.toml
.github/workflows/: push-docker-image.yaml
domeneshop_dynamic_dns/: run.py
