[tool.poetry]
name = "domeneshop-dynamic-dns"
version = "0.1.0"
description = "Update DNS pointers automatically using DomeneShop API"
authors = ["Bjarne Rørnes"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
